# christmas-card

./: CMakeLists.txt  README.md  vcpkg.json
lib/: CMakeLists.txt  card.cpp  gothic.cpp  gothic.h  gothicMerryChristmas.cpp  gothicMerryChristmas.h  options.cpp  options.h  renderer.h  sprite.h  wide.cpp  wide.h  wideMerryChristmas.cpp  wideMerryChristmas.h
lib/include/: card.h
tools/: CMakeLists.txt  main.cpp
